--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     signingConfigs {
         config {
@@ -15,8 +15,8 @@ android {
         applicationId "com.northernwinds.northernwinds"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -33,6 +33,5 @@ dependencies {
     compile 'com.android.support:support-v4:24.0.0+'
     compile 'com.android.support:design:24.0.0'
     compile 'com.backendless:backendless:3.0.17+'
-    compile 'com.android.volley:volley:1.0.0'
     compile 'cn.pedant.sweetalert:library:1.3'
 }
