--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.northernwinds.northernwinds">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -15,17 +16,18 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MenuActivity">
+        <activity android:name=".MenuActivity" android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity" />
-        <activity android:name=".ChoiceActivity" />
-        <activity android:name=".ThankYouActivity" />
-        <activity android:name=".FeedbackActivity"></activity>
+        <activity android:name=".GameActivity" android:screenOrientation="portrait" />
+        <activity android:name=".ChoiceActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ThankYouActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".FeedbackActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
